tests/errors/wrong-args.au
func f(a,b,c) {
}
f(10)